--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <!-- Property -->
     <properties>
         <java.version>17</java.version>
+        <auth.provider>Discord,Google</auth.provider>
     </properties>
 
     <!-- Dependencies -->
@@ -70,6 +71,25 @@
             <version>1.5.5.Final</version>
         </dependency>
     </dependencies>
+
+    <!-- Profile -->
+    <profiles>
+        <!-- Lucas -->
+        <profile>
+            <id>LSP</id>
+            <properties>
+                <auth.provider>Google</auth.provider>
+            </properties>
+        </profile>
+
+        <!-- Harry -->
+        <profile>
+            <id>PGA</id>
+            <properties>
+
+            </properties>
+        </profile>
+    </profiles>
 
     <!-- Build -->
     <build>
